<resources>
    <string name="app_name">letsrunmate-final</string>
    <string name="already_have"> ALREADY HAVE ACCOUNT</string>
    <string name="need_account"> NEED A NEW ACCOUNT ?</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="myapp">Let\'s run mate!</string>
    <string name="home">Home</string>
    <string name="community">feed</string>
    <string name="history">history</string>
    <string name="messages">messages</string>
    <string name="settings">Settings  </string>
    <string name="log_in">Log in</string>
    <string name="create_a_new_account_mate">Create a New Account Mate!</string>
    <string name="login_to_your_account_mate">Login to your account Mate!</string>
    <string name="let_s_run_mate">Let\'s run mate!</string>
    <string name="activities">Activities</string>
    <string name="distance">Distance</string>
    <string name="friends">Friends</string>
    <string name="back">Back</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="description">Description</string>
    <string name="please_wait">Please wait…</string>

    <!-- Firebase childs -->
    <string name="firebase_users">users</string>
    <string name="firebase_user_details">user_details</string>
    <string name="firebase_activities">activities</string>
    <string name="firebase_users_activities">user_activities</string>
    <string name="siema">siema</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure, you want to sign out ?</string>
    <string name="sign_out">Sign out</string>
    <string name="signing_out">Signing out</string>
    <string name="user_id">user_id</string>
    <string name="firebase_trophies">trophies</string>
    <string name="firebase_date">date</string>
    <string name="firebase_duration_time">duration_time</string>
    <string name="firebase_distance">distance</string>
    <string name="firebase_caption">caption</string>
    <string name="firebase_activity_id">activity_id</string>
    <string name="firebase_user_id">user_id</string>
    <string name="firebase_avgPace">avgPace</string>
    <string name="firebase_points">points</string>
    <string name="firebase_url">url</string>
    <string name="firebase_kcal">kcal</string>
    <string name="firebase_url_photo">url_photo</string>
    <string name="firebase_comments">comments</string>

    <!-- Names -->
    <string name="activity_path" />
    <string name="conteiner">container</string>
    <string name="profile_fragment">profile_fragment</string>
    <string name="main_fragment">main_fragment</string>
    <string name="username_firebase">username</string>
    <string name="description_firebase">description</string>
    <!--Mapboxkey-->
    <string name="mapboxkey">pk.eyJ1IjoibHVrYXN6LWNoIiwiYSI6ImNrNTZxN2Z5MjA2NnQzbHBnaHc0MnhwbHkifQ.37F97TiqsT5r_v0snjdeYQ</string>
    <string name="basic_run">Basic run</string>
    <string name="kilometers">Kilometers</string>
    <string name="time">Time</string>
    <string name="pace">Pace</string>
    <string name="kcal">Kcal</string>
    <string name="splits">Splits</string>
    <string name="you_really_want_to_discard_this_run">You really want to discard this run ?</string>
    <string name="sure">Sure ?</string>
    <string name="photo">photo</string>
    <string name="days_ago">\tDAYS AGO</string>
    <string name="run">Run</string>
    <string name="add_comment_here">Add comment here</string>
    <string name="comments">Comments</string>
    <string name="reply">Reply</string>
    <string name="today">Today</string>
    <string name="distance_run">Distance run</string>
    <string name="interval_run">Interval run</string>
    <string name="_0_00">0,00</string>
    <string name="send">Send</string>
    <string name="yes_discard">Yes, discard</string>
    <string name="no_back_to_run">No, back to run</string>
    <string name="log_out">Log out</string>
    <string name="empty">--</string>
    <string name="comments_view_fragment">CommentsViewFragment</string>
    <string name="search">Search...</string>
    <string name="comments_id" />
    <string name="calling_activity">calling_activity</string>
    <string name="search_activity">SearchActivity</string>
    <string name="user">user</string>
    <string name="profile_view_fragment">profile_view_fragment</string>
    <string name="firebase_following">following</string>
    <string name="firebase_followers">followers</string>
    <string name="user_details">user_details</string>
    <string name="feed_activity">feed_activity</string>
    <string name="activity">Activity</string>
    <string name="STOP_SERVICE">STOP_SERVICE</string>
    <string name="START_SERVICE">START_SERVICE</string>
    <string name="Chat">Chat   </string>
    <string name="last_online">last_online</string>
    <string name="chat_activity">chat_activity</string>
    <string name="chat_inside_fragment">chat_inside_fragment</string>
    <string name="activity_number">activity_number</string>
    <string name="start_run">START RUN</string>


</resources>
