<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/distance_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/_0_00"
            android:gravity="center"
            android:textSize="50sp"
            android:fontFamily="@font/bangers"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            app:layout_constraintBottom_toBottomOf="@id/distance_tv"
            android:text="@string/kilometers"
            android:gravity="center"/>



        <TextView
            android:fontFamily="@font/bangers"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:id="@+id/show_pace"
            android:hint="@string/empty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance_tv" />

        <TextView
            android:fontFamily="sans-serif-smallcaps"
            android:id="@+id/text_pace"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pace"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_pace" />

        <TextView
            android:hint="@string/empty"
            android:fontFamily="@font/bangers"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:id="@+id/show_kcal"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toStartOf="@+id/show_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/show_pace"
            app:layout_constraintTop_toBottomOf="@id/distance_tv"
            android:gravity="center_horizontal"/>

        <TextView
            android:fontFamily="sans-serif-smallcaps"
            android:id="@+id/text_kcal"
            android:layout_width="80dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/kcal"
            app:layout_constraintEnd_toStartOf="@+id/text_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_pace"
            app:layout_constraintTop_toBottomOf="@+id/show_kcal" />

        <TextView
            android:hint="@string/empty"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:id="@+id/show_time"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance_tv" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>