<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.SignOutFragment"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:fontFamily="@font/amaranth_bold_italic"
            android:id="@+id/sign_out_textview"
            android:text="@string/are_you_sure_you_want_to_sign_out" />
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_startscreen"
            android:layout_below="@id/sign_out_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:id="@+id/sign_out_button"/>
    </RelativeLayout>
    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:id="@+id/sign_out_progressbar"/>
    <TextView
        android:id="@+id/sign_out_progressbartext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signing_out"
        android:textColor="@color/black"
        android:layout_alignBottom="@id/sign_out_progressbar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>