<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Register.StartActivity"
    android:background="@drawable/start">

    <Button
        android:id="@+id/login_btn"
        android:text="@string/already_have"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/button_startscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_account_btn" />

    <Button
        android:id="@+id/new_account_btn"
        android:text="@string/need_account"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_startscreen_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/let_s_run_mate"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/create_acc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>