<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Register.LoginActivity">
    <include layout="@layout/app_bar_layout" android:id="@+id/login_app_bar"/>

    <Button
        android:id="@+id/log_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        android:background="@drawable/button_startscreen_second"
        android:width="200dp"
        android:height="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/password_login"
            android:drawablePadding="10dp"
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:outlineAmbientShadowColor="@color/orange_primary"
            android:id="@+id/log_email"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/email_login"
            android:drawablePadding="10dp"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/log_textviewtop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/amaranth_bold_italic"
        android:text="@string/login_to_your_account_mate"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_bar" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_app_bar"
        android:layout_marginTop="120dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/login_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        app:layout_constraintTop_toBottomOf="@id/login_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>