<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECDD03"
    android:id="@+id/fragment_run">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/kilometers_text">
        <include layout="@layout/run_stats_view"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/distance_run_viewer"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:hint="@string/_0_00"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@id/kilometers_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/kilometers_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:text="@string/kilometers"
        app:layout_constraintTop_toBottomOf="@id/distance_run_viewer"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:fontFamily="@font/bangers"/>

    <Button
        android:id="@+id/pause_run_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="172dp"
        android:alpha="0.75"
        android:background="@drawable/icon_pause_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kilometers_text" />

    <Button
        android:id="@+id/resume_run_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/play_run_icon"
        app:layout_constraintRight_toLeftOf="@id/pause_run_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kilometers_text" />

    <Button
        android:id="@+id/stop_run_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/stop_run_icon"
        app:layout_constraintTop_toBottomOf="@id/kilometers_text"
        app:layout_constraintLeft_toRightOf="@id/pause_run_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/fragment_run_pop"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/pop_discard"
        android:alpha="0.9">
        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/bangers"
            android:id="@+id/fragment_run_textTop"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sure"
            >
        </TextView>
        <TextView
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:id="@+id/fragment_run_textBottom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_run_textTop"
            android:text="@string/you_really_want_to_discard_this_run"
            >
        </TextView>
        <Button
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/yes_discard"
            android:background="@drawable/buttons_discard"
            android:layout_marginBottom="10dp"
            android:id="@+id/fragment_run_button_yes"
            android:layout_width="125dp"
            android:layout_height="60dp"
            />
        <Button
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/no_back_to_run"
            android:background="@drawable/buttons_discard"
            android:id="@+id/fragment_run_button_no"
            android:layout_width="125dp"
            android:layout_height="60dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>